samples/_failures_safe/1761172352_017bfb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40069615.c: In function ‘main’:
./samples/SAFE/__tmp_40069615.c:178:33: error: missing terminating ' character
  178 |         input_buffer[len - 1] = '\
      |                                 ^~
./samples/SAFE/__tmp_40069615.c:178:9: error: expected expression at end of input
  178 |         input_buffer[len - 1] = '\
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_40069615.c:178:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_40069615.c:178:9: error: expected declaration or statement at end of input
